<?xml version="1.0" encoding="UTF-8"?>
<?xml-mode href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>{{ cookiecutter.project_name }}</name>
  <version>0.0.0</version>
  <description>{{ cookiecutter.project_description }}</description>

  <maintainer email="linghao.zhang@protonmail.com">Linghao Zhang</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>lib-leetcode</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
